@@ -1,3 +1,8 @@
+2006-08-07  Johan Dahlin  <johan@gnome.org>
+
+	* tests/test_treeview.py (TreeViewTest._test_default_attributes): Add
+	a test for #350252
+
 2006-08-06  Johan Dahlin  <johan@gnome.org>
 
 	* docs/fixxref.py: Remove, it moved to PyGObject.
